[gd_scene format=3 uid="uid://bafuvucpdw6b7"]

[ext_resource type="Script" uid="uid://coy6t25fgnfv6" path="res://Mazes/maze_1/puzzle_1.gd" id="1_6vgcx"]

[sub_resource type="LabelSettings" id="LabelSettings_6vgcx"]
font_size = 43

[sub_resource type="LabelSettings" id="LabelSettings_qkfk8"]
font_size = 43

[sub_resource type="LabelSettings" id="LabelSettings_twmht"]
font_size = 43
font_color = Color(0.21568628, 1, 0, 1)

[node name="Puzzle" type="ColorRect" unique_id=890264653]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)
script = ExtResource("1_6vgcx")

[node name="HBoxContainer2" type="HBoxContainer" parent="." unique_id=364074059]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="ColorRect" type="ColorRect" parent="HBoxContainer2" unique_id=976963558]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer2" unique_id=1255693206]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0, 0.01666689, 1, 1)

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer2" unique_id=527320396]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
color = Color(0.2166667, 1, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=957814586]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -50.5
offset_right = 70.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="red" type="Button" parent="HBoxContainer" unique_id=1905046551]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="blue" type="Button" parent="HBoxContainer" unique_id=1889571174]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="green" type="Button" parent="HBoxContainer" unique_id=992094168]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="." unique_id=896435877]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 356.0
offset_top = 200.0
offset_right = 396.0
offset_bottom = 259.0
text = "0"
label_settings = SubResource("LabelSettings_6vgcx")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="." unique_id=693435341]
modulate = Color(0, 0.015686275, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -124.0
offset_right = 20.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_qkfk8")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="." unique_id=2067950303]
layout_mode = 0
offset_left = 756.0
offset_top = 200.0
offset_right = 796.0
offset_bottom = 259.0
text = "0"
label_settings = SubResource("LabelSettings_twmht")
horizontal_alignment = 1

[node name="Unlock" type="Button" parent="." unique_id=1563501146]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = 113.0
offset_right = -121.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Unlock"

[node name="Close" type="Button" parent="." unique_id=882219809]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 171.0
offset_top = 132.0
offset_right = 221.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Close"

[connection signal="pressed" from="HBoxContainer/red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="HBoxContainer/blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="HBoxContainer/green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="Unlock" to="." method="_on_unlock_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
